--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,12 @@ readme = "README.md"
 packages = [{include = "hexlet_code"}]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.8.1"
 django = "^4.2"
 python-dotenv = "^1.0.0"
 dj-database-url = "^1.3.0"
+flake8 = "^6.0.0"
+gunicorn = "^20.1.0"
 
 
 [build-system]
