--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,12 @@ version = "0.1.0"
 description = "Task manager"
 authors = ["sidnnov <sidnnov@gmail.com>"]
 readme = "README.md"
-packages = [{include = "hexlet_code"}]
+packages = [{include = "task_manager"}]
+classifiers = [
+    "Topic :: Software Development :: Build Tools",
+    "Topic :: Software Development :: Libraries :: Python Modules"
+]
+repository = "https://github.com/sidnnov/python-project-52"
 
 [tool.poetry.dependencies]
 python = "^3.8.1"
