--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ python-dotenv = "^1.0.0"
 dj-database-url = "^1.3.0"
 flake8 = "^6.0.0"
 gunicorn = "^20.1.0"
+psycopg2-binary = "^2.9.6"
 
 
 [build-system]
