--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dj-database-url = "^1.3.0"
 flake8 = "^6.0.0"
 gunicorn = "^20.1.0"
 psycopg2-binary = "^2.9.6"
+django-bootstrap4 = "^23.1"
 
 
 [build-system]
