--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ flake8 = "^6.0.0"
 gunicorn = "^20.1.0"
 psycopg2-binary = "^2.9.6"
 django-bootstrap4 = "^23.1"
+django-extensions = "^3.2.1"
 
 
 [build-system]
