--- a/.github/workflows/my_check_django.yml
+++ b/.github/workflows/my_check_django.yml
@@ -1,4 +1,4 @@
-name: Django CI
+name: My check
 
 on:
   push:
@@ -8,19 +8,15 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-    strategy:
-      max-parallel: 4
-      matrix:
-        python-version: [3.7, 3.8, 3.9]
-
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
+
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v4
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: "3.10"
+        
     - name: Install Dependencies
       run: |
            pip install poetry
@@ -29,10 +25,12 @@ jobs:
       env:
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
           DEBUG: True
-    - name: Run Tests
+
+    - name: Run linter and pytest
       run: |
-        python manage.py test        run: |
-           make test
+            make lint
+            make test
+
     - name: code coverage
       uses: paambaati/codeclimate-action@v3.0.0
       env:
@@ -40,6 +38,7 @@ jobs:
       with:
           coverageCommand: make test-coverage
           debug: true
+  
     - name: Run linter
       run: |
            make lint
