--- a/.github/workflows/my_check_django.yml
+++ b/.github/workflows/my_check_django.yml
@@ -28,11 +28,8 @@ jobs:
     - name: code coverage
       uses: paambaati/codeclimate-action@v3.0.0
       env:
+          SECRET_KEY: ${{ secrets.SECRET_KEY }}
           CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
       with:
           coverageCommand: make test-coverage
           debug: true
-  
-    - name: Run linter
-      run: |
-           make lint
