--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,9 @@ authors = ["sidnnov <sidnnov@gmail.com>"]
 readme = "README.md"
 packages = [{include = "task_manager"}]
 classifiers = [
-    "Topic :: Software Development :: Build Tools",
-    "Topic :: Software Development :: Libraries :: Python Modules"
+    "Programming Language :: Python",
+    "Framework :: Django",
+    "Topic :: Internet",
 ]
 repository = "https://github.com/sidnnov/python-project-52"
 
@@ -16,13 +17,14 @@ python = "^3.8.1"
 django = "^4.2"
 python-dotenv = "^1.0.0"
 dj-database-url = "^1.3.0"
-flake8 = "^6.0.0"
 gunicorn = "^20.1.0"
 psycopg2-binary = "^2.9.6"
 django-bootstrap4 = "^23.1"
 django-extensions = "^3.2.1"
-pytest-cov = "^4.1.0"
 
+[tool.poetry.group.dev.dependencies]
+flake8 = "^6.0.0"
+pytest-cov = "^4.1.0"
 
 [build-system]
 requires = ["poetry-core"]
