--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ gunicorn = "^20.1.0"
 psycopg2-binary = "^2.9.6"
 django-bootstrap4 = "^23.1"
 django-extensions = "^3.2.1"
+django-filter = "^23.2"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.0.0"
