--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ repository = "https://github.com/sidnnov/python-project-52"
 python = "^3.8.1"
 django = "^4.2"
 python-dotenv = "^1.0.0"
-dj-database-url = "^1.3.0"
+dj-database-url = "0.5.0"
 gunicorn = "^20.1.0"
 psycopg2-binary = "^2.9.6"
 django-bootstrap4 = "^23.1"
