--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ psycopg2-binary = "^2.9.6"
 django-bootstrap4 = "^23.1"
 django-extensions = "^3.2.1"
 django-filter = "^23.2"
+rollbar = "0.15.0"
 
 
 [tool.poetry.group.dev.dependencies]
